--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -57,7 +54,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
                     <ul class="navbar-nav">
                         <li><a class="nav-link active" href="#home">Home</a></li>
-                        <!--<li><a class="nav-link" href="#about">About Us</a></li>-->
+                        <li><a class="nav-link" href="#about">About Us</a></li>
                         <li><a class="nav-link" href="	#products">Products</a></li>
 						<li><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -111,7 +108,7 @@
 	<!-- End Banner -->
 	
 	<!-- Start About us -->
-	<!--<div id="about" class="about-box">
+	<div id="about" class="about-box">
 		<div class="about-a1">
 			<div class="container">
 				<div class="row">
@@ -124,32 +121,21 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="row align-items-center about-main-info">
-							<div class="col-lg-8 col-md-6 col-sm-12">
-								<h2> About <span>Leida</span></h2>
-								<p>Fusce convallis ante id purus sagittis malesuada. Sed erat ipsum, suscipit sit amet auctor quis, vehicula ut leo. Maecenas felis nulla, tincidunt ac blandit a, consectetur quis elit. Nulla ut magna eu purus cursus sagittis. Praesent fermentum tincidunt varius. Proin sit amet tempus magna. Fusce pellentesque vulputate urna. </p>
-							</div>
-							<div class="col-lg-4 col-md-6 col-sm-12">
-								<div class="about-img">
-									<img class="img-fluid rounded" src="images/about-img-01.jpg" alt="" />
-								</div>
-							</div>
-						</div>
-						<div class="row align-items-center about-main-info">
-							<div class="col-lg-4 col-md-6 col-sm-12">
-								<div class="about-img">
-									<img class="img-fluid rounded" src="images/about-img-02.jpg" alt="" />
-								</div>
-							</div>
-							<div class="col-lg-8 col-md-6 col-sm-12">
-								<h2> About <span>Dominic</span></h2>
-								<p>Fusce convallis ante id purus sagittis malesuada. Sed erat ipsum, suscipit sit amet auctor quis, vehicula ut leo. Maecenas felis nulla, tincidunt ac blandit a, consectetur quis elit. Nulla ut magna eu purus cursus sagittis. Praesent fermentum tincidunt varius. Proin sit amet tempus magna. Fusce pellentesque vulputate urna. </p>
+							<div class="col-lg-12 col-md-12 col-sm-12">
+								<!--<h2> About Us</h2>-->
+								<h3 style="font-size:24px; font-family: 'Marck Script', cursive;color: #222222;">
+									Creamborn - The IceCream Manufacturers started on 1st of September in 2019 in MuradNagar.
+									The Ice cream making company with fully automated ice cream plants and machines.
+									Maintaining consistent food safety standards in the products manufactured from us is one of the major objectives for us.
+								Our clients are the top priority for us. Lucky to got a chance to serve you once.</h3>
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>-->
+	</div>
 	<!-- End About us -->
 	
 	<!-- Start Story -->
@@ -560,12 +546,11 @@
 			</div>
 			<div class="row">
 				<div style="font-family: 'Marck Script', cursive; font-size: 28px" class="col-lg-6 col-sm-6 col-xs-6">
-					<p>New Defence Colony</p>
-					<p>Railway Road, Murad Nagar - Ghaziabad</p>
+					<p>Mr. Rohit (Prop) </p>
+					<p>Murad Nagar - Ghaziabad</p>
 					<p>Uttar Pradesh - 201206</p>
 					<b>Call Us: </b> <p>(91)-8077367643, (91)-8755470745</p>
 					<b>Email Us: </b> <p>palr784@gmail.com</p>
-					<p>creambornicecream@gmail.com</p>
 
 				</div>
 			</div>
