--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="pogoSlider" id="js-main-slider">
-					<div class="pogoSlider-slide"  style="background-image:url(images/sundae.png);">
+					<div class="pogoSlider-slide"  style="background-image:url(images/ice-cream.jpg);">
 						<div class="lbox-caption">
 							<div class="lbox-details">
 								<h1>The IceCream Manufacturers</h1>
