added meta tag for google search engine

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
- 
+	<meta name="google-site-verification" content="y4vgkawS-5sdaY7tI4AoxUzTU1x_rdkC3c_B9JXCIq0" />
      <!-- Site Metas -->
     <title>Creamborn Real Ice Cream</title>
     <meta name="keywords" content="">
